--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,12 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+table {
+    display: table !important;
+    width: 100%;
+}
+
+code {
+    white-space: pre !important;
+}
